# ociogen

./: .gitignore  README.md  colorspaces.yaml  config_settings.yaml  ociogen.py  pyproject.toml  requirements.txt
reference/: SOURCES.md
src/ociogen/: __init__.py  core.py  gui.py  ociogen.py  ociogengui.py
src/ociogen/data/: config_settings.yaml
src/ociogen/settings/: __init__.py
src/ociogen/utilities/: colorimetry.py
utilities/: __init__.py  colorimetry.py  colorspaces.py  ocio_utility_functions.py  transfer_functions.py
